# only-dev

./: .gitignore  README.md  config.json  pyproject.toml  rename.py
resumes/: scopely_software_engineer_web_fullstack.docx
src/onlydev/api/: app.py  description.py
src/onlydev/api/static/: index.html  script.js  styles.css
src/onlydev/ats/: greenhouse.py  lever.py
src/onlydev/cli/: discover.py  monitor.py  report.py  run.py  tailor.py
src/onlydev/core/: config.py  db.py  filters.py  migrations.py  models.py  monitor.py  repository.py  tailor.py
src/onlydev/scripts/discovery/: greenhouse.py  validate_greenhouse.py
src/onlydev/scripts/reports/: report_trends.py
src/onlydev/scripts/sources/: seed_sources.py
